--- a/manifests/4.7/logging.openshift.io_kibanas_crd.yaml
+++ b/manifests/4.7/logging.openshift.io_kibanas_crd.yaml
@@ -1,6 +1,11 @@
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.3.0
+  creationTimestamp: null
   name: kibanas.logging.openshift.io
 spec:
   group: logging.openshift.io
@@ -211,3 +216,9 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
