--- a/bundle/manifests/logging.openshift.io_elasticsearches.yaml
+++ b/bundle/manifests/logging.openshift.io_elasticsearches.yaml
@@ -1,6 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.3.0
+  creationTimestamp: null
   name: elasticsearches.logging.openshift.io
 spec:
   group: logging.openshift.io
@@ -38,7 +41,7 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
-        description: Elasticsearch is the Schema for the elasticsearches API
+        description: An Elasticsearch cluster instance
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -435,6 +438,7 @@ spec:
                     format: int32
                     type: integer
                   status:
+                    description: The current Status of the Elasticsearch Cluster
                     type: string
                   unassignedShards:
                     format: int32
@@ -646,3 +650,9 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
