--- a/bundle/manifests/logging.openshift.io_kibanas.yaml
+++ b/bundle/manifests/logging.openshift.io_kibanas.yaml
@@ -1,6 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.3.0
+  creationTimestamp: null
   name: kibanas.logging.openshift.io
 spec:
   group: logging.openshift.io
@@ -156,7 +159,7 @@ spec:
             required:
             - managementState
             type: object
-          status:
+          statuss:
             items:
               description: KibanaStatus defines the observed state of Kibana
               properties:
@@ -211,3 +214,9 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
