--- a/config/samples/logging_v1_elasticsearch.yaml
+++ b/config/samples/logging_v1_elasticsearch.yaml
@@ -1,7 +1,40 @@
-apiVersion: logging.openshift.io/v1
-kind: Elasticsearch
+apiVersion: "logging.openshift.io/v1"
+kind: "Elasticsearch"
 metadata:
-  name: elasticsearch-sample
+  name: "elasticsearch"
+  annotations:
+      elasticsearch.openshift.io/loglevel: trace
 spec:
-  # Add fields here
-  foo: bar
+  managementState: "Managed"
+  nodeSpec:
+    resources:
+      limits:
+        memory: 1Gi
+      requests:
+        cpu: 100m
+        memory: 1Gi
+  nodes:
+  - nodeCount: 1
+    roles:
+    - client
+    - data
+    - master
+    storage: {}
+  redundancyPolicy: ZeroRedundancy
+  indexManagement:
+    policies:
+    - name: infra-policy
+      pollInterval: 1m
+      phases:
+        hot:
+          actions:
+            rollover:
+              maxAge:   2m
+        delete:
+          minAge: 5m
+    mappings:
+    - name:  infra
+      policyRef: infra-policy
+      aliases:
+      - infra
+      - logs.infra
